force-app/main/default/objects/CEMS_Performance__c/CEMS_Performance__c.object-meta.xml
<CustomObject>
    <label>Performance</label>
    <nameField>
        <label>Performance Review Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>