force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Bonus__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Bonus__c</fullName>
    <label>Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>