force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Career_Development_Focus_Areas__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Career_Development_Focus_Areas__c</fullName>
    <label>Career Development Focus Areas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepting constructive feedback</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Conflict resolution</fullName>
            </value>
            <value>
                <fullName>Creativity and Innovation</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Goal-setting</fullName>
            </value>
            <value>
                <fullName>Industry-Specific Knowledge</fullName>
            </value>
            <value>
                <fullName>Leadership and Management</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Sales and Marketing</fullName>
            </value>
            <value>
                <fullName>Strategic Planning</fullName>
            </value>
            <value>
                <fullName>Technical Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>