force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Current_Discussion_Date__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Current_Discussion_Date__c</fullName>
    <label>Current Discussion Date</label>
    <type>Date</type>
</CustomField>