force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Employee__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Employee__c</fullName>
    <label>Personnel</label>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Performance</relationshipLabel>
    <relationshipName>Performance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>