force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Feedback__c</fullName>
    <label>Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>