force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Hike__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Hike__c</fullName>
    <label>Hike</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>