force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Opportunities__c</fullName>
    <label>Opportunities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>