force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Overall_Rating__c</fullName>
    <label>Overall Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>