force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Performance_ID__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Performance_ID__c</fullName>
    <displayFormat>PE-{0000}</displayFormat>
    <label>Performance ID</label>
    <type>AutoNumber</type>
</CustomField>