force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Performance_Outcome__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Performance_Outcome__c</fullName>
    <label>Performance Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready For Promotion</fullName>
            </value>
            <value>
                <fullName>Not Ready For Promotion</fullName>
            </value>
            <value>
                <fullName>Performance Improvement Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>