force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Promoted_Designation__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Promoted_Designation__c</fullName>
    <label>Promoted Designation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CEMS_Performance_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software Engineer</fullName>
            </value>
            <value>
                <fullName>Senior Software Engineer</fullName>
            </value>
            <value>
                <fullName>Salesforce Technical Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Consultant</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Domain Architect</fullName>
            </value>
            <value>
                <fullName>Technical Lead/Engineering Lead/Team Lead</fullName>
            </value>
            <value>
                <fullName>Salesforce Functional Consultant</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>