force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Rating_Value_3__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Rating_Value_3__c</fullName>
    <label>Rating Value 3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>