force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Strength__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Strength__c</fullName>
    <label>Strength</label>
    <type>TextArea</type>
</CustomField>