force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Threats__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Threats__c</fullName>
    <label>Threats</label>
    <type>TextArea</type>
</CustomField>