force-app/main/default/objects/CEMS_Performance__c/fields/CEMS_Weakness__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Weakness__c</fullName>
    <label>Weakness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>