force-app/main/default/objects/CEMS_Performance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CEMS_Strength__c</columns>
    <columns>CEMS_Threats__c</columns>
    <columns>CEMS_Weakness__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>